3.10.0/_sources/gallery/lines_bars_and_markers/joinstyle.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines_bars_and_markers/joinstyle.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_lines_bars_and_markers_joinstyle.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_joinstyle.py:


=========
JoinStyle
=========

The `matplotlib._enums.JoinStyle` controls how Matplotlib draws the corners
where two different line segments meet. For more details, see the
`~matplotlib._enums.JoinStyle` docs.

.. GENERATED FROM PYTHON SOURCE LINES 10-18

.. code-block:: Python


    import matplotlib.pyplot as plt

    from matplotlib._enums import JoinStyle

    JoinStyle.demo()
    plt.show()




.. image-sg:: /gallery/lines_bars_and_markers/images/sphx_glr_joinstyle_001.png
   :alt: Join style
   :srcset: /gallery/lines_bars_and_markers/images/sphx_glr_joinstyle_001.png, /gallery/lines_bars_and_markers/images/sphx_glr_joinstyle_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 19-20

.. tags:: purpose: reference, styling: linestyle


.. _sphx_glr_download_gallery_lines_bars_and_markers_joinstyle.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: joinstyle.ipynb <joinstyle.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: joinstyle.py <joinstyle.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: joinstyle.zip <joinstyle.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
